# rsomics-maximal-matching

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: matching.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs
